<resources>
    <string name="app_name">ProyectoToDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hazlo ¡ya! </string>
    <string name="nav_header_subtitle">(:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu Principal</string>
    <string name="menu_gallery">Mi día</string>
    <string name="menu_slideshow">Importante</string>
    <string name="menu_agregarLista">Agregar Lista</string>
    <string name="menu_crearTarea">Crear Tarea</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>